# mcca

./: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  README.md  build_mcca.sh  build_msvc.bat  cmake_install.cmake  ninja_build_clang.bat
Common/: common.cpp  file_utils.cpp  helpers.cpp  matfile_handler.cpp
Common/Headers/: colors.hpp  common.hpp  constants.hpp  error_handler.hpp  file_utils.hpp  helpers.hpp  timer.hpp
Data/matrix_shapes/: mat_10_10_1_3_E.txt  mat_10_10_1_3_I.txt  mat_10_10_1_3_K.txt  mat_10_10_1_3_L.txt
Data/multicolor/: mat_10_10_1_3.txt
common/: common.cpp  helpers.cpp  matfile_handler.cpp
common/headers/: common.hpp  constants.hpp  error_handler.hpp  file_utils.hpp  helpers.hpp  matfile_handler.hpp  timer.hpp
data/default_matrices/: mat_10_10_1_3_F.txt
data/multicolor/: mat_5_5_1_4.txt
mcca/: ATTRIBUTION.md  CMakeLists.txt  README.md  Resource.rc  cli_utils.cpp  color_grid.cpp  main.cpp  max_color_dfs.cpp  max_color_uf.cpp  mcca.sln  mcca.vcxproj  mcca.vcxproj.filters  union_find.cpp
mcca/Headers/: cli_utils.hpp  color_grid.hpp  main.hpp  max_color_dfs.hpp  max_color_uf.hpp  union_find.hpp
mcca/headers/: cli_utils.hpp  color_grid.hpp  main.hpp  max_color_dfs.hpp  max_color_uf.hpp  union_find.hpp
mcca/mcca/: mcca.sln  mcca.vcxproj  mcca.vcxproj.filters
mcca_vs/: mcca_vs.sln  mcca_vs.vcxproj  mcca_vs.vcxproj.filters
static_binaries/: mcca  mcca_mac
